[package]
name = "reverse_polish_notation"
version = "0.1.0"
authors = ["taiyaki <60641436+taiyaki-ichi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3.21"
