[package]
name = "todo_app"
version = "0.1.0"
authors = ["taiyaki <60641436+taiyaki-ichi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# version 注意
actix-rt = "1.0.0"
actix-web = "2.0.0"
thiserror = "1.0.23"
